Refacto exercice20 (virtual threads)